@@ -1,3 +1,9 @@
+2009-02-26 23:40-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* main.m: Cleanup
+	* PBMakefileGenerator.m: Add return files.
+	* PBPbxNativeTarget.m: Fixes for static libraries.
+
 2009-02-24 16:27-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* main.m: Compile all static if one project is a static lib. 
